@@ -79,10 +79,4 @@
       provides="plone.app.content.interfaces.IIndexableObjectWrapper"
       factory=".CatalogTool.ExtensibleIndexableObjectWrapper" />
 
-  <!-- Adapter for default workflow lookup -->
-  <adapter
-      factory=".workflow.ToolWorkflowChain"
-      trusted="y"
-      />
-
 </configure>
